Mon Nov 04 19:06:38 GMT 2013  Olly Betts <olly@survex.com>

	* examples/quest.cc: Add --check-at-least option to quest.

Thu Oct 24 04:38:52 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac,tests/soaktest/soaktest.cc: If srandom() and random()
	  aren't available, use srand() and rand() instead.

Thu Oct 24 02:34:06 GMT 2013  Olly Betts <olly@survex.com>

	* common/safewindows.h: Define WINVER to 0x0500 if not otherwise set,
	  so we get new interfaces like MEMORYSTATUSEX under mingw.

Thu Oct 24 02:11:36 GMT 2013  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager_remotetcp.cc: Need cstdlib for free
	  under mingw.

Thu Oct 24 02:11:05 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac,tests/api_replicate.cc,tests/queryparsertest.cc,
	  tests/termgentest.cc: Probe for _putenv_s() in configure as mingw
	  doesn't provide it.

Thu Oct 24 01:23:14 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Don't unset CC as it's used by libtool under mingw.

Thu Oct 24 01:17:07 GMT 2013  Olly Betts <olly@survex.com>

	* net/tcpserver.cc: Fix mingw build error.

Thu Oct 24 01:00:18 GMT 2013  Olly Betts <olly@survex.com>

	* common/omassert.h: Suppress "unused local typedef" warnings from
	  GCC 4.8.

Wed Oct 23 20:00:05 GMT 2013  Olly Betts <olly@survex.com>

	* common/realtime.h: Rework RealTime::to_timeval() under __WIN32__ to
	  avoid having to pull in safewinsock2.h,

Wed Oct 23 12:39:53 GMT 2013  Olly Betts <olly@survex.com>

	* common/realtime.h: Under __WIN32__, we need safewinsock2.h for
	  struct timeval.

Wed Oct 23 10:21:02 GMT 2013  Olly Betts <olly@survex.com>

	* common/omassert.h: If the compiler supports C++11, use
	  static_assert to implement CompileTimeAssert.

Wed Oct 23 10:02:50 GMT 2013  Olly Betts <olly@survex.com>

	* common/realtime.h,net/tcpclient.cc: Fix mingw build errors.

Wed Oct 23 09:50:00 GMT 2013  Olly Betts <olly@survex.com>

	* common/win32_uuid.cc: Fix mingw compiler warning.
