@@ -1,3 +1,12 @@
+Tue Nov 05 15:20:15 GMT 2013  Olly Betts <olly@survex.com>
+
+	* api/query.cc,api/queryinternal.cc,api/queryinternal.h,
+	  include/xapian/query.h: Add methods to allow introspection on
+	  Query objects - currently you can read the type/operator, how many
+	  subqueries there are, and get a particular subquery.  For a
+	  query which is a term, Query::get_terms_begin() allows you to
+	  get read the term.  (see #159)
+
 Mon Nov 04 19:06:38 GMT 2013  Olly Betts <olly@survex.com>
 
 	* examples/quest.cc: Add --check-at-least option to quest.
